name:                parallella-dsp-demo
version:             0.1.0.0
synopsis:            Demo application for DSP on Parallella using RAW-Feldspar and Zeldspar
license-file:        LICENSE
-- author:              Máté Karácsony
maintainer:          k_mate@inf.elte.hu
copyright:           Copyright (c) 2016, Máté Karácsony
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

executable parallella-dsp-demo
  main-is:             Main.hs

  build-depends:
    base < 5,
    raw-feldspar >= 0.1,
    raw-feldspar-mcs >= 0.1,
    zeldspar >= 0.2

  default-language: Haskell2010

  default-extensions:
    ScopedTypeVariables

  hs-source-dirs: src

